--- a/style2.css
+++ b/style2.css
@@ -66,17 +66,36 @@
  }
  .Hall{
      width: 30%;
-     height: 300px;
+     height: 350px;
      float: right;
   
  }
  .Fot{
-     height: 150px;
+     margin:  10px;
+     height: 100px;
      width: 70%;
-    margin: 10px;
-    background-color: orangered;
+     display: flex;
+     background-color: orangered;
  }
  .Fot img{
      width: 6.0%;
+     height: auto;
+     padding: 10px;
+ }
+ .Tab{
+     margin: 10px;
+     height: 100px;
+     width: 70%;
+     border: 1px solid black;
+ }
+ .Tab h4{
+     padding: 20px;
+ }
+ .Details{
+     display: flex;
+     border: 1px solid black;
+ }
+ #car{
+     padding: 25% auto;
  }
  
