--- a/style2.css
+++ b/style2.css
@@ -92,10 +92,28 @@
      padding: 20px;
  }
  .Details{
+     height: 40px;
      display: flex;
      border: 1px solid black;
+     background-color: red;
  }
  #car{
-     padding: 25% auto;
+     background-color: yellow;
+     padding: 5px 20px ;
+     width: 20%;
+     border: 1px black;
  }
+ #two{
+    background-color: green;
+    padding: 5px 20px ;
+    width: 20%;
+    border: 1px black;
+ }
+ #next{
+    background-color: yellow;
+    padding: 5px 20px ;
+    width: 20%;
+    border: 1px black;
+ }
+
  
