--- a/style2.css
+++ b/style2.css
@@ -176,7 +176,7 @@
     background-color:black;
     height: 100px;
     display: flex;
-    align-items: center;
+    
       
 }
 .Dream p{
@@ -197,5 +197,18 @@ height: 40px;
 }
 .Make{
     display: flex;
+    background-color: green;
 }
+.column{
+  background-color: orangered;
+  float: right;
+  width: 33.33%;
+  padding: 10px;
+  height: 300px;
+}
+.row {
+    content: "";
+    display: table;
+    clear: both;
+  }
  
