--- a/style2.css
+++ b/style2.css
@@ -198,17 +198,32 @@ height: 40px;
 .Make{
     display: flex;
     background-color: green;
+    height: 350px;
+}
+.Make h2{
+    font-size: small;
+}
+.Make p{
+    font-size: small;
+    font-weight: 400;
 }
 .column{
   background-color: orangered;
   float: right;
   width: 33.33%;
   padding: 10px;
-  height: 300px;
+  height: 200px;
+}
+.column h2{
+    color: white;
+    font-size: smaller;
+    font-weight: 800;
 }
 .row {
-    content: "";
-    display: table;
+   
+   width: 60%;
+    display: flex;
     clear: both;
+    float: right;
   }
  
