--- a/style2.css
+++ b/style2.css
@@ -5,14 +5,16 @@
     background-color: black;
     width: 100%;
     height: 100px;
+    display: flex;
 }
 .Items ul{
      
      height: 100px;
      width: 100%;
-     float: right;
+     
  }
  .Items ul  a{
+     
      text-decoration: none;
      color: white;
     padding: 5px 20px;
@@ -22,6 +24,7 @@
      color: white;
      background-color: yellow;
      padding: 5px 20px;
+     float: right;
  }
  .House{
      background-color: black;
