--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,6 @@
 *{
-    margin: 0px;
+    padding: 0px;
+
 }
 .Items{
     background-color: black;
@@ -18,12 +19,12 @@
      text-decoration: none;
      color: white;
     padding: 5px 20px;
-    background-color: blue;
+    
  }
  .Items button{
-     color: white;
-     background-color: yellow;
-     padding: 5px 20px;
+     color: black;
+     background-color: #FFAC12
+     padding: 10px 20px;
     
  }
  .House{
@@ -40,17 +41,22 @@
  }
  #Nyumba h3,p{
      color: white;
+     padding-left: 20%;
  }
  #Doh{
      width: 50%;
      height: 100px;
- }
- #Doh p{
-     font-size: small;
+     
  }
  #Doh h3{
+     padding-left: 20%;
      color: white;
  }
+ #Doh h3 p{
+     color: white;
+     font-size: small;
+ }
+ 
  .Pic{
      display: flex;
      width: 100%;
