add paragraphs to images

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ body ul a{
     margin: 20px;
 }
 .Hustle p{
+    color: black;
     padding-left: 30px;
     margin: 20px;
 }
@@ -75,6 +76,7 @@ body ul a{
     margin: 5%;
 }
 .Maridadi p{
+    color: black;
     padding-left: 60px;
     font-size: large;
     font-weight: 600;
