makes the navbar responsive

--- a/style2.css
+++ b/style2.css
@@ -23,7 +23,7 @@
  }
  .Items button{
      color: black;
-     background-color: #FFAC12
+     background-color: #FFAC12;
      padding: 10px 20px;
     
  }
