--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,9 @@ body ul a{
     color: yellow;
     background-color: black;
     margin-left: 30px;
-    margin: 20px;
+    margin: 45px;
     font-size: medium;
+    padding: 10px 30px;
 }
 .Maridadi{
     margin: 5%;
@@ -80,6 +81,10 @@ body ul a{
     padding-left: 60px;
     font-size: large;
     font-weight: 600;
+}
+.Maridadi span{
+    background-color: green;
+    padding: 5px 20px;
 }
 .Ente{
     display: flex;
