--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,5 @@
 *{
     padding: 0px;
-
 }
 .Items{
     background-color: black;
@@ -9,23 +8,19 @@
     display: flex;
 }
 .Items ul{
-     
      height: 100px;
-     width: 100%;
-     
+     width: 100%; 
  }
  .Items ul  a{
      float: right;
      text-decoration: none;
      color: white;
     padding: 5px 20px;
-    
  }
  .Items button{
      color: black;
      background-color: #FFAC12;
-     padding: 10px 20px;
-    
+     padding: 10px 20px; 
  }
  .House{
      background-color: black;
@@ -45,8 +40,7 @@
  }
  #Doh{
      width: 50%;
-     height: 100px;
-     
+     height: 100px; 
  }
  #Doh h3{
      padding-left: 20%;
@@ -133,9 +127,33 @@
    
 }
 .Fea{ 
-    width: 60%;
-    height: 250px;
-    margin: 10px 10% 10px 10%;
+  display: flex;
+  background-color: green;
+  height: 350px;
+  width: 70%;
+  justify-content: center;
+}
+#onene{
+   text-align: center;
+    height: 350px;
+    width: 25%;
+    background-color: yellow;
+}
+#To{
+    height: 350px;
+    width: 25%;
+    background-color: green;
+}
+#Ora{
+    height: 350px;
+    width: 25%;
+    background-color: purple; 
+}
+#Air{
+    height: 350px;
+    width: 25%;
+    background-color: red;  
+}
 }
 .Sim{
     display: flex;
@@ -151,6 +169,9 @@
 
 .Sim h4{
     padding: 20px;
+}
+.Sim span{
+    padding: 10px;
 }
 #List{
     color: black;
@@ -179,7 +200,7 @@
     background-color:black;
     height: 100px;
     display: flex;
-    
+    padding: 20px;
       
 }
 .Dream p{
