--- a/style2.css
+++ b/style2.css
@@ -265,21 +265,24 @@ header ul li{
 .Dream{
     background-color:black;
     height: 100px;
-    display: flex;
     padding: 20px;
+    position: relative;
       
 }
 .Dream p{
-   position: absolute;
-   right: 220px;
-   font-size: larger;
+   position: relative;
+   left: 100px;
+   top: 30px;
+   font-size: 23px;
   
 }
 .Dream button{
 position: absolute;
 right: 100px;
 color: black;
-background-color: rgb(131, 131, 10);
+bottom: 30px;
+background-color:  #FFAC12;
+border-radius: 0 15px 0 0 ;
 height: 40px;
 }
 .Dream p span{
@@ -305,28 +308,41 @@ height: 40px;
   height: 200px;
 }
 .column h2{
+    margin-left: 40px;
     color: white;
-    font-size: smaller;
+    font-size: 17px;
     font-weight: 800;
 }
 .row {
    
-   width: 60%;
+   width:100%;
     display: flex;
     clear: both;
     float: right;
   }
   .media{
-      height: 220px;
-      background-color:green;
+    height: 220px;
+    background-color: black;
   }
   .media i{
       color: white;
      padding: 10px;
-     
   }
   .fb{
-    background-color: red;
+    position: relative;
+    right: 100px;
+    display: flex;
+    padding: 50px;
+    margin-left: 140px;
+    margin-top: 50px;
+    
+    
+  }
+  .fb > i{
+      color: white;
+    display: flex;
+    margin-left: 40px;
+
     
   }
  
